@@ -11,7 +11,6 @@ import project.trendpick_pro.domain.common.base.rq.Rq;
 import project.trendpick_pro.domain.member.entity.Member;
 import project.trendpick_pro.domain.notification.entity.Notification;
 import project.trendpick_pro.domain.notification.service.NotificationService;
-import project.trendpick_pro.domain.orders.entity.OrderItem;
 import project.trendpick_pro.domain.orders.service.OrderService;
 
 import java.util.List;
@@ -21,20 +20,19 @@ import java.util.stream.Collectors;
 @RequestMapping("trendpick/usr/notification")
 @RequiredArgsConstructor
 public class NotificationController {
+
     private final Rq rq;
     private final NotificationService notificationService;
-    private final OrderService orderService;
+
     @GetMapping("/list")
     @PreAuthorize("hasAuthority({'MEMBER'})")
     public String showList(Model model) {
         Member member=rq.getMember();
 
        List<Notification>notifications=notificationService.findByMember(member.getId());
-       List<Notification> orderNotifications = notifications.stream()
-                .collect(Collectors.toList());
+       List<Notification> orderNotifications = notifications.stream().toList();
 
         List<Notification> deliveryNotifications = notifications.stream()
-                // 배송중, 배송완료에만 알림이 가도록, 배송전취소 상태일때 주문취소 알림만 가도록 설정
                 .filter(n -> !n.getDeliveryState().equals("준비중")&&!n.getDeliveryState().equals("배송전취소"))
                 .collect(Collectors.toList());
 
@@ -49,5 +47,4 @@ public class NotificationController {
         notificationService.removeNotification(notificationId);
         return rq.redirectWithMsg("/trendpick/usr/notification/list", "알림이 삭제되었습니다.");
     }
-
 }
